# llama2.c

./: .gitignore  pyproject.toml  run  run.c  runq  tinystories.py  train.py
