[tool.poetry]
name = "llama2-c"
version = "0.1.0"
description = ""
authors = ["Peyton Walters <peyton@cockroachlabs.com>"]
readme = "README.md"
packages = [{include = "llama2"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"
pytest = "7.4.0"
requests = "2.31.0"
sentencepiece = "0.1.99"
torch = "2.0.1"
tqdm = "4.64.1"
wandb = "0.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
